--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,4 +18,6 @@ target 'dropbox' do
   #     flipper_post_install(installer)
   #   end
   # end
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
 end
