--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dropbox": "^10.24.0",
     "events": "^1.1.1",
     "expo": "~41.0.1",
+    "expo-file-system": "~11.0.2",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "https-browserify": "^0.0.1",
