--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,4 +20,6 @@ target 'dropbox' do
   # end
   pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
