--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "dropbox": "^10.24.0",
     "events": "^1.1.1",
     "expo": "~41.0.1",
-    "expo-file-system": "~11.0.2",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "https-browserify": "^0.0.1",
@@ -29,6 +28,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-crypto": "^2.2.0",
+    "react-native-fs": "^2.19.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
@@ -42,6 +42,7 @@
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "readable-stream": "^1.0.33",
+    "rn-fetch-blob": "^0.12.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
